--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,3 +1,5 @@
+@import url("./shape.css");
+@import url("./animation.css");
 @font-face {
     font-family: "gokuboso";
     src: url(../../resources/chogokubosogothic_5.ttf);
@@ -11,14 +13,24 @@ html {
     color: lightsteelblue;
     width:100%;
     height:100%;
+    overflow: hidden;
 }
 
 body {
     margin: 0 auto;
-    padding: 0 2.5%;
-    width: 95%;
+    padding: 0 auto;
+    width: 100%;
     height: 100%;
     font-size: 0.8rem;
+}
+
+.background{
+    position: absolute;
+    margin: 0 auto;
+    padding: 0 auto;
+    width:100%;
+    height:100%;
+    z-index: -1;
 }
 
 h1 {
@@ -42,15 +54,18 @@ h1 {
 }
 
 header {
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: column;
-    /* border-bottom: solid 1px lightsteelblue; */
+    padding: 0 2.5%;
+    background-color: transparent;
 }
 
 content {
     width: 100%;
     height: 100%;
+    padding: 0 2.5%;
+    background-color: transparent;
 }
 
 row {
@@ -96,37 +111,7 @@ button:hover {
     padding: 1rem;
 }
 
-.fade-in-ltr {
-    opacity 1;
-    animation: fade-in-left-to-right 0.55s ease-in forwards;
-}
 
-.fade-in-rtl {
-    opacity 0;
-    animation: fade-in-right-to-left 0.55s ease-out forwards;
-}
-
-@keyframes fade-in-right-to-left {
-    from {
-       opacity: 0;
-       transform: translateX(400%);
-    }
-    to {
-       opacity: 1;
-       transform: translateX(300%);
-    }
- }
-
- @keyframes fade-in-left-to-right {
-    from {
-       opacity: 1;
-       transform: translateX(300%);
-    }
-    to {
-       opacity: 0;
-       transform: translateX(400%);
-    }
- }
 
 
 
