--- a/static/style/animation.css
+++ b/static/style/animation.css
@@ -1,31 +1,35 @@
 .fade-in-ltr {
-    opacity 1;
+    opacity: 1;
     animation: fade-in-left-to-right 0.55s ease-in forwards;
 }
 
 .fade-in-rtl {
-    opacity 0;
+    opacity: 0;
     animation: fade-in-right-to-left 0.55s ease-out forwards;
 }
 
 @keyframes fade-in-right-to-left {
     from {
        opacity: 0;
+       display: none;
        transform: translateX(400%);
     }
     to {
        opacity: 1;
-       transform: translateX(300%);
+       display: block;
+       transform: translateX(288%);
     }
  }
 
  @keyframes fade-in-left-to-right {
     from {
        opacity: 1;
-       transform: translateX(300%);
+       display: block;
+       transform: translateX(288%);
     }
     to {
        opacity: 0;
+       display: none;
        transform: translateX(400%);
     }
  }
