--- a/static/style/animation.css
+++ b/static/style/animation.css
@@ -1,11 +1,11 @@
 .fade-in-ltr {
    opacity: 1;
-   animation: fade-in-left-to-right 0.55s ease-in forwards;
+   animation: fade-in-right-to-left 0.55s ease-in-out reverse;
 }
 
 .fade-in-rtl {
    opacity: 0;
-   animation: fade-in-right-to-left 0.55s ease-out forwards;
+   animation: fade-in-right-to-left 0.55s ease-in-out forwards;
 }
 
 @keyframes fade-in-right-to-left {
@@ -18,19 +18,6 @@
       opacity: 1;
       display: block;
       transform: translateX(288%);
-   }
-}
-
-@keyframes fade-in-left-to-right {
-   from {
-      opacity: 1;
-      display: block;
-      transform: translateX(288%);
-   }
-   to {
-      opacity: 0;
-      display: none;
-      transform: translateX(400%);
    }
 }
 
