--- a/static/style/style.css
+++ b/static/style/style.css
@@ -152,7 +152,45 @@ button:hover{
 
 
 /* ----- Card ----- */
+.cards {
+    margin: 10% auto;
+    width: 90%;
+}
+.card{
+    width: 240px;
+    height: 320px;
+    overflow: hidden;
+    border-radius: 3%;
+    border: 1px solid var(--color-secondary);
+}
+.card > img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+}
+.card > .text {
+    padding: 1rem;
+}  
+.card > .text > .title {
+    font-size: 3rem;
+    font-weight: 900;
+    margin:0.5rem 0;
 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.card > .text > .detail {
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin:0 0;
+    height: 5rem;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
 
 
 /* ----- SlideMenu ----- */
