--- a/static/style/animation.css
+++ b/static/style/animation.css
@@ -21,23 +21,22 @@
    }
 }
 
-
-button.hamburger.onclose > span{
+button.hamburger.onclose > span {
    animation: hamburger-lm 0.25s step-end forwards;
 }
-button.hamburger.onclose > span::before{
+button.hamburger.onclose > span::before {
    animation: hamburger-lt 0.25s forwards;
 }
-button.hamburger.onclose > span::after{
+button.hamburger.onclose > span::after {
    animation: hamburger-lb 0.25s forwards;
 }
-button.hamburger.onshow > span{
+button.hamburger.onshow > span {
    animation: hamburger-lm 0.25s step-end reverse;
 }
-button.hamburger.onshow > span::before{
+button.hamburger.onshow > span::before {
    animation: hamburger-lt 0.25s reverse;
 }
-button.hamburger.onshow > span::after{
+button.hamburger.onshow > span::after {
    animation: hamburger-lb 0.25s reverse;
 }
 
@@ -50,7 +49,8 @@ button.hamburger.onshow > span::after{
    }
 }
 @keyframes hamburger-lm {
-   50%, 100% {
+   50%,
+   100% {
       height: 0px;
    }
 }
