--- a/static/style/style.css
+++ b/static/style/style.css
@@ -18,10 +18,9 @@ html {
     margin: 0 auto;
     padding: 0 auto;
     background-color: var(--color-dark);
-    color: var(--color-text-light);
+    color: var(--color-secondary);
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     font-size: 10px;
     filter: hue-rotate(-20deg);
 }
@@ -41,18 +40,32 @@ h1 {
 }
 
 header {
+    position: fixed;
+    top: 0;
     width: 95vw;
     display: flex;
     flex-direction: column;
-    padding: 0 2.5vw;
+    padding: 1rem 0;
+    margin: 0 2.5vw;
     background-color: transparent;
+
+    border-bottom: 1px solid var(--color-secondary);
+    mix-blend-mode: multiply;
 }
 
 content {
-    width: 100vw;
-    height: 100vh;
+    width: 95vw;
     padding: 0 2.5vw;
+    margin-top: 20vh;
     background-color: transparent;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+
+    overflow: scroll;
 }
 
 row {
@@ -88,6 +101,19 @@ row {
 .tc-dark {
     color: var(--color-text-dark);
 }
+.tc-darker {
+    color: var(--color-text-darker);
+}
+
+.ts-large {
+    font-size: 2rem;
+}
+.ts-normal {
+    font-size: 1rem;
+}
+.ts-small {
+    font-size: 0.75rem;
+}
 
 /* ----- Button Component ----- */
 button {
@@ -104,8 +130,6 @@ button.hamburger {
     border-radius: 50%;
     width: 32px;
     height: 32px;
-    font-size: 1.7rem;
-    font-weight: bolder;
 
     position: relative;
     overflow: hidden;
@@ -147,10 +171,41 @@ button:hover {
     background-color: var(--color-light);
 }
 
+/* ----- Contents ----- */
+.top-text {
+    margin: 0 auto;
+    width: 70%;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
+.cards-description {
+    margin: 0 auto;
+    margin-top: 5%;
+    width: 70%;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
+.top-text > p, 
+.cards-description > p {
+    text-align: center;
+    padding: 0;
+}
+
 /* ----- Card ----- */
 .cards {
-    margin: 10% auto;
-    width: 90%;
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .card {
     width: 240px;
@@ -158,6 +213,9 @@ button:hover {
     overflow: hidden;
     border-radius: 3%;
     border: 1px solid var(--color-secondary);
+    backdrop-filter: blur(10px);
+    background-color: rgba(var(--color-light-rgb), 0.2);
+    margin: 24px 24px;
 }
 .card > img {
     width: 100%;
@@ -169,7 +227,7 @@ button:hover {
 }
 .card > .text > .title {
     font-size: 3rem;
-    font-weight: 900;
+    font-weight: bold;
     margin: 0.5rem 0;
 
     overflow: hidden;
@@ -178,7 +236,7 @@ button:hover {
 }
 .card > .text > .detail {
     font-size: 1.5rem;
-    font-weight: 900;
+    font-weight: normal;
     margin: 0 0;
     height: 5rem;
 
@@ -230,11 +288,14 @@ button:hover {
 
 /* ----- Backgrounds ----- */
 .background {
-    position: absolute;
+    position: fixed;
+    top: 0;
     margin: 0 auto;
     width: 100vw;
     height: 100vh;
     z-index: -1;
+    background-blend-mode:overlay;
+    overflow: hidden;
 }
 
 .background > .shapes {
