--- a/static/style/style.css
+++ b/static/style/style.css
@@ -9,6 +9,7 @@
 /* ----- Elements Setting ----- */
 * {
     font-family: "Poiret One", "gokuboso";
+    box-sizing: border-box;
 }
 *::-webkit-scrollbar {
     display: none;
@@ -195,35 +196,46 @@ button:hover {
 .cards-description > p {
     text-align: center;
     padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.recents {
+    margin: 0 auto;
 }
 
 /* ----- Card ----- */
 .cards {
-    width: 80%;
-    height: auto;
+    max-width: 1160px;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
 }
 .card {
-    width: 240px;
+    flex-basis: 240px;
     height: 320px;
     overflow: hidden;
-    border-radius: 3%;
     border: 1px solid var(--color-secondary);
     backdrop-filter: blur(10px);
     background-color: rgba(var(--color-light-rgb), 0.2);
     margin: 24px 24px;
+    cursor: pointer;
+}
+.card:hover {
+    scale: 1.1;
 }
 .card > img {
     width: 100%;
     height: 160px;
     object-fit: cover;
+    border: none;
 }
 .card > .text {
+    height: 120px;
     padding: 1rem;
+    background-color: rgba(var(--color-light-rgb), 0.2);
+    border-bottom: 1px dashed var(--color-secondary);
 }
 .card > .text > .title {
     font-size: 3rem;
@@ -238,20 +250,52 @@ button:hover {
     font-size: 1.5rem;
     font-weight: normal;
     margin: 0 0;
-    height: 5rem;
 
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
 }
+.card > .optional {
+    height: 40px;
+    padding: 1rem calc(1rem - 4px);
+    background-color: rgba(var(--color-light-rgb), 0.2);
+}
+.optional > .tags{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.tags > li[class*="tag"]{
+    min-width: 60px;
+    max-width: 100%;
+    padding: 2px 0.5rem;
+    margin: 0 4px;
+    font-size: 1.2rem;
+    border-radius: 4px;
+    text-align: center;
+}
+.tag-news{
+    background-color: var(--color-accent);
+}
+.tag-blog{
+    background-color: var(--color-primary);
+}
+.tag-shop{
+    background-color: var(--color-dark);
+}
 
 /* ----- SlideMenu ----- */
 .slidemenu {
     position: absolute;
-    top: 5.5rem;
+    right: 100%;
+    top: 8rem;
     width: 25vw;
-    height: 92vh;
+    height: 90vh;
     color: var(--color-light);
     border: 1px solid var(--color-light);
     opacity: 0;
