--- a/static/style/style.css
+++ b/static/style/style.css
@@ -57,6 +57,7 @@ header {
 content {
     width: 95vw;
     padding: 0 2.5vw;
+    margin: 0 auto;
     margin-top: 20vh;
     background-color: transparent;
 
@@ -75,6 +76,13 @@ row {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+header > row > h1{
+    cursor: pointer;
+}
+#content-area{
+    margin: 0 auto;
 }
 
 /* ----- Text Decoration ----- */
