--- a/static/style/style.css
+++ b/static/style/style.css
@@ -2,17 +2,17 @@
 @import url("./shape.css");
 @import url("./animation.css");
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;400;700;900&family=M+PLUS+Rounded+1c:wght@100;400;700&family=Poiret+One&display=swap');
-@font-face {
+/* @font-face {
     font-family: "gokuboso";
     src: url(../../static/resources/fonts/chogokubosogothic_5.ttf);
-}
+} */
 
 /* ----- Elements Setting ----- */
 * {
     font-family: "Poiret One", 
-    'gokuboso',
-    'M PLUS 1p',
+    /* 'gokuboso', */
     'M PLUS Rounded 1c', 
+    'M PLUS 1p',
     sans-serif;
     box-sizing: border-box;
     font-weight: 100;
