--- a/static/style/blog.css
+++ b/static/style/blog.css
@@ -1,3 +1,18 @@
+#blog {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-content {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.article-area {
+    margin: 0 8rem;
+}
 .article-area > * {
     font-size: 1.5rem;
 }
@@ -11,8 +26,49 @@
     font-size: 1.5rem;
 }
 
-.article-area a{
-    color: var(--color-accent);
+a{
+    color: var(--color-accent-light);
     text-decoration: none;
-    border-bottom: 0.5px solid var(--color-accent);
+    border-bottom: 0.5px solid var(--color-accent-light);
+}
+
+.side-bar {
+    width: 60%;
+}
+.side-bar > * {
+    border: 1px solid var(--color-secondary);
+    min-height: 200px;
+    margin-bottom: 16px;
+    padding: 1rem;
+}
+.side-bar > * > ul{
+    list-style: none;
+    margin: 0;
+    margin-top: 1rem;
+    padding: 0;
+}
+.side-bar > * > ul > li{
+    margin-bottom: 0.4rem;
+}
+.side-bar > * > ul > li > a{
+    color: var(--color-accent-light);
+    border-bottom: 0.5px solid var(--color-accent-light);
+}
+
+.blog-navigation {
+    height: 8rem;
+    margin: 0 8rem;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.navigation-buttons{
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
