--- a/static/style/blog.css
+++ b/static/style/blog.css
@@ -11,7 +11,7 @@
 }
 
 .article-area {
-    margin: 0 8rem;
+    margin: 0 6%;
 }
 .article-area > * {
     font-size: 1.5rem;
@@ -57,7 +57,7 @@ a{
 
 .blog-navigation {
     height: 8rem;
-    margin: 0 8rem;
+    margin: 0 6%;
 
     display: flex;
     flex-direction: row;
