--- a/static/style/style.css
+++ b/static/style/style.css
@@ -232,6 +232,7 @@ button:hover {
 }
 .card {
     flex-basis: 240px;
+    width: 240px;
     height: 320px;
     overflow: hidden;
     border: 1px solid var(--color-secondary);
@@ -239,6 +240,10 @@ button:hover {
     background-color: rgba(var(--color-light-rgb), 0.2);
     margin: 24px 24px;
     cursor: pointer;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .card:hover {
     scale: 1.1;
@@ -250,6 +255,7 @@ button:hover {
     border: none;
 }
 .card > .text {
+    width: 100%;
     height: 120px;
     padding: 1rem;
     background-color: rgba(var(--color-light-rgb), 0.2);
@@ -275,6 +281,7 @@ button:hover {
     -webkit-line-clamp: 3;
 }
 .card > .optional {
+    width: 100%;
     height: 40px;
     padding: 1rem calc(1rem - 4px);
     background-color: rgba(var(--color-light-rgb), 0.2);
